ui/k8s/frontend-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: flatfish-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /api/v1/(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: cockroachdbflatfishservice
#                 port:
#                   number: 80
#           - path: /(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flatfish-frontend-ingress
  namespace: hugo-ngowthammatas
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/cluster-issuer: letsencrypt-thgice
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - flatfish-frontend.pq46c.icekube.ics.cloud
      secretName: pq46c-frontend-tls
  rules:
    - host: flatfish-frontend.pq46c.icekube.ics.cloud
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flatfish-frontend-service
                port:
                  number: 80
    - host: flatfish-backend.pq46c.icekube.ics.cloud
      http:
        paths:
          - path: /api/v1/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cockroachdbflatfishservice
                port:
                  number: 8080
